# llp_lab3

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Makefile  Makefile.win  README.md  ast.c  ast.h  graphql_ast.c  graphql_ast.h  lex.yy.c  lexer.l  main.c  parser.tab.c  parser.tab.h  parser.y  structs.thrift  test  test.txt
client/: Makefile  Makefile.win  client.c  convertor.c  convertor.h  graphql_ast.c  graphql_ast.h  lexer.l  main.c  parser.y  serializer.c  serializer.h
db/src/zgdb/: condition.c
db/zgdb/: condition.c  condition.h  condition_public.h  document.c  document_public.h  element.c  element_public.h  query.c  query_public.h
gen-c_glib/: structs_types.c  structs_types.h  zgdb_service.c  zgdb_service.h
server/: Makefile  deserializer.c  deserializer.h  server  server.c
src/: CMakeLists.txtt  demo.c  main.c  run_tests.c
src/tests/: test.c
src/utils/: input.h  optional.c  optional.h
src/zgdb/: block.h  condition.c  condition.h  condition_public.h  document.c  document.h  document_public.h  element.c  element.h  element_public.h  format.c  format.h  format_public.h  index.h  iterator.c  iterator.h  iterator_public.h  list.c  list.h  query.c  query.h  query_public.h  schema.c  schema.h  schema_public.h
